@@ -1,4 +1,4 @@
-The following changes have been made between John 1.7.9 and 1.7.9.7:
+The following changes have been made between John 1.7.9 and 1.7.9.8:
 
 * Enhanced the support for DES-based tripcodes by making use of the bitslice
 DES implementation and supporting OpenMP parallelization.
@@ -21,9 +21,13 @@ based on benchmark results for different builds made with different versions of
 GCC on CPUs ranging from Pentium 3 to Core i7.  Unfortunately, there's a known
 performance regression with this change on Atom.  Previously, this code was
 only enabled for x86-64 and/or OpenMP-enabled builds.
+* The formats interface has been enhanced to better support GPU implementations
+(in jumbo), as well as fast hashes on multi-CPU systems (not yet made use of).
 * Assorted minor corrections to Cygwin builds were made.
 * Fixed a bug in the Keyboard external mode (uninitialized variables on
 "--restore" or when minlength is greater than 1).
+* Enhanced the generic crypt(3) format to handle possible NULL returns from
+crypt() and crypt_r().
 * Updated the FAQ.
 
 The following changes have been made between John 1.7.8 and 1.7.9:
@@ -304,4 +308,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.82 2013/02/21 21:46:51 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.83 2013/04/20 01:49:40 solar Exp $
